--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,15 @@
     transform: rotate(360deg);
   }
 }
+
+.wide {
+  width: 100vw;
+}
+
+.middle {
+  margin: auto;
+}
+
+.grey-background {
+  background: grey;
+}
