--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,15 @@
   }
 }
 
+.container-fluid {
+  padding-right: 0px !important;
+  padding-left: 0px !important;
+}
+
+.navbar {
+  background-color: #1F1F1F;
+}
+
 .wide {
   width: 100%;;
 }
