--- a/src/home.css
+++ b/src/home.css
@@ -1,4 +1,55 @@
-.body {
+.navigation {
+    /* background-color: rgb(24, 144, 255); */
+    background-image: linear-gradient(to right, red, yellow);
+    position: fixed;
+    width: 100%;
+    z-index: 2;
+    display: flex;
+  }
+  
+  .navigation h2{
+    display: inline-block;
+    margin-left: 30px;
+    margin-top: 21px;
+    color: #f2f2f2;
+    cursor: pointer;
+  }
+  
+  .navigation a {
+    display: block;
+    float: right;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 23.9px 15px;
+    text-decoration: none;
+    font-size: 17px;
+    transition: 0.3s;
+  }
+  
+  .navigation a:hover {
+    background: white;
+    color: black;
+  }
+  
+  .alignRight {
+    margin-left: auto;
+  }
+
+.select-screen {
+    background-image: linear-gradient(black 90%, white 10%);
+    height: 100vh;
+}
+
+.characters {
     margin: auto;
     width: 60%;
+    padding-top: 100px;
+}
+
+.hover {
+    transition: 0.5s;
+}
+
+.hover-over:hover {
+    opacity: 0.7;
 }
